Update - fixed login data entry via web
-written AJAX and JS using JQuery to send data inputted on the users end to the server - data successfully recieved by server on test No. 16.
No errors in getBody() function
Jquery loaded successfully

Next to process and send home webpage

--- a/login.html
+++ b/login.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <script src="login.js"></script>
     <title>Log In</title>
   </head>
   <body>
     <h1> Airline Booking System </h1>
-    <form id="log_in" method="POST">
+    <form id="log_in" method="POST" >
       <input type="text" name="username"/>
       <input type="password" name="password"/>
       <input type="submit" name="Log In"/>
