Update to responses
this needs to be sorted out, I had an issue where the java http server didnt think that there was a body, but there was

--- a/book.html
+++ b/book.html
@@ -5,6 +5,8 @@
     <title></title>
   </head>
   <body>
-
+  <h1>Home Panel</h1>
+  <form id="home_menu" method="POST">
+  </form>
   </body>
 </html>
