Update to Webpage Navigation
using a fragment style approach, sending fragments to be added to the webpage when changes occur

--- a/Home.html
+++ b/Home.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Airline System Home</title>
-</head>
-<body>
-This is the Home Panel of the booking system
-
-<form id="Options" method="POST">
-    <input type="submit" name ="Book"/>
-    <input type="submit" name="Log_Out"/>
-</form>
-</body>
-</html>
+<form id="Options" method="POST"><input type="submit" name ="Book"/><input type="submit" name="Log_Out"/></form>
