Interaction via multiple fragments fixed
this uses ajax and javascript to dynamically change part of the webpage so that the elements can be interacted with

--- a/Home.html
+++ b/Home.html
@@ -1,1 +1,4 @@
-<form id="Options" method="POST"><input type="submit" name ="Book"/><input type="submit" name="Log_Out"/></form>
+<div id="options" >
+    <button id="btn_book">Book</button>
+    <button id="btn_log_out">Log Out</button>
+</div>
