--- a/MainPage.html
+++ b/MainPage.html
@@ -13,7 +13,7 @@
       <form id="log_in" method="POST" >
         <input type="text" name="username"/>
         <input type="password" name="password"/>
-        <input type="submit" name="Log In"/>
+        <input type="submit" name="Log In" value="Log In"/>
         </form>
     </div>
   </body>
