--- a/MainPage.html
+++ b/MainPage.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
+<!-- This page is the main page that is going to be changed using AJAX to show content on the screen -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="login.js"></script>
+    <link rel="stylesheet" href="styles.css"/> <!-- style sheet -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> <!-- this is the jquery API -->
+    <script src="login.js"></script> <!-- might need to change the name of this js file, as it will likely contain all processing for the webpage --> 
     <title>Log In</title>
   </head>
   <body>
     <h1> Airline Booking System </h1>
+	<!-- This div is going to be containing all of the other content. it will be auto filled using AJAX and JS-->
     <div id="main_content">
       <form id="log_in" method="POST" >
         <input type="text" name="username"/>
